--- a/src/components/CityItem.module.css
+++ b/src/components/CityItem.module.css
@@ -1,6 +1,9 @@
 .cityItem,
 .cityItem:link,
 .cityItem:visited {
+  width: 600px;
+  margin: 10px 0;
+
   display: flex;
   gap: 1.6rem;
   align-items: center;
